--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -37,8 +37,9 @@
         </button>
         <ul class="list-unstyled font-medium">
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer bg-gray-100" style="border-radius: 50px 0 0 50px;"><a href="/Admin/Index" class="text-black">Dashboard</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/products/Index" class="text-black">Product</a></li>
-            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Index" class="text-black">Order</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/users/Index" class="text-black">Users</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/products/Index" class="text-black">Products</a></li>
+            <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Index" class="text-black">Orders</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Waiting" class="text-black">Waiting</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/orders/Request_Cancel" class="text-black">Request Cancel</a></li>
             <li class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer" style="border-radius: 50px 0 0 50px;"><a href="/ranks/Index" class="text-black">Ranks</a></li>
