--- a/Views/Shopping/Promocode.cshtml
+++ b/Views/Shopping/Promocode.cshtml
@@ -28,7 +28,7 @@
             <div class="mt-2 text-black">
                 <div class="relative w-full" data-te-input-wrapper-init>
                     <label for="code" class="text-sm">Promocode</label><br />
-                    <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="You must be logged to user promo code" readonly/>
+                    <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="You must be logged to user promo code" readonly />
                 </div>
             </div>
             <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium py-3 mt-6" href="/ShoppingCart/CheckOut">Check Out</a>
@@ -46,9 +46,7 @@
                 <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium py-3 mt-6" type="submit" value="Apply" />
             }
         }
-
-
-
+        <a class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium text-md py-3 mt-2 " href="/Payment/CreatePayment">Paypal</a>
 
     </div>
 </main>
