--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -5,57 +5,44 @@
 }
 
 <main class="h-screen">
-    <div class="flex justify-start p-4">
-        <div href="#" class="items-center p-2 text-base font-normal text-gray-900 col-3">
-            <img class="h-75 w-75 ms-2 mb-3 rounded-circle" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
+    <div class="w-75 mx-auto border rounded-lg shadow-md p-5 my-4 text-center">
+        <div class="w-25 h-25 mx-auto">
+            <img class="object-center object-cover rounded-circle" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
         </div>
-        <div class="col-9">
+        <div class="text-3xl font-bold mt-3">Name</div>
+        <div class="font-light text-md mb-4">Administrator</div>
 
-            <p class="text-4xl font-bold my-4 row">Dashboard</p>
-            <div class="flex grid grid-cols-3 grid-rows-2 gap-4 justify-between">
-                <div class="text-start me-5">
-                    <div class="flex text-lg font-bold my-2">
-                        Name
-                        <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
-                    </div>
-                    <p>Maria Clerk</p>
+        <div class="m-2 border rounded-lg p-4 grid grid-cols-2 text-start">
+            <div class="col-span-1">
+                <div class="flex text-lg font-bold my-2">
+                    Name
+                    <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
                 </div>
-                <div class="text-start me-5">
-                    <div class="text-lg font-bold my-2">
-                        Phone
-                        <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
-                    </div>
-                    <p>632-122-2854</p>
-                </div>
-                <div class="text-start me-5">
-                    <div class="text-lg font-bold my-2">
-                        Address
-                        <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
-
-                    </div>
-                    <p>44-46 Pasteur, Ben Nghe, District 1, Ho Chi Minh City</p>
-                </div>
-                <div class="text-start me-5">
-                    <div class="text-lg font-bold my-2">
-                        Email
-                        <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
-                    </div>
-                    <p>maria246@gmail.com</p>
-                </div>
-                <div class="text-start me-5">
-                    <div class="text-lg font-bold my-2">Image</div>
-                    <p>Upload your image</p>
-                </div>
+                <p>Maria Clerk</p>
             </div>
-            <div class="w-40">
-                <div class="rounded bg-amber-300 hover:bg-sky-600 hover:text-white text-center my-4">
-                    <button class="py-2 font-semibold">Save changes</button>
+            <div class="col-span-1">
+                <div class="text-lg font-bold my-2">
+                    Phone
+                    <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
+                </div>
+                <p>632-122-2854</p>
+            </div>
+            <div class="col-span-1">
+                <div class="text-lg font-bold my-2">
+                    Email
+                    <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
+                </div>
+                <p>maria246@gmail.com</p>
+            </div>
+            <div class="col-span-1">
+                <div class="text-lg font-bold my-2">Address</div>
+                <p>44-46 Pasteur, Ben Nghe, District 1, Ho Chi Minh City</p>
+            </div>
+            <div class="col-span-2 text-center mt-2">
+                <div href="#" class="btn rounded-md bg-yellow-300 hover:bg-yellow-500 cursor-pointer text-black font-medium px-4 py-2 mt-4" style="width: fit-content">
+                    Edit
                 </div>
             </div>
         </div>
     </div>
-
-    <script src="https://kit.fontawesome.com/6e08fcf7ad.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-
 </main>
