--- a/Views/products/Edit.cshtml
+++ b/Views/products/Edit.cshtml
@@ -6,91 +6,141 @@
 }
 
 
-<h1>Edit</h1>
 <br />
-<p>Product</p>
+@Html.Partial("_Notifications")
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="w-75 rounded-md grid grid-cols-2 border mx-auto my-4 p-4">
 
-        <div class="col-span-1">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.id_product)
-        </div>
 
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.names, new { htmlAttributes = new { @class = "form-control", @placeholder = "Name" } })
-            @Html.ValidationMessageFor(model => model.names, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", @type = "file", @accept = "image/*" } })
-            @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
+    <div class="w-75 rounded-md grid grid-cols-3 border mx-auto my-5 p-4">
+        <h1 class="col-span-3 ml-4 mb-5">Edit</h1>
+        <img class="object-center col-span-1"
+             src="~/wwwroot/Images/Products/@Html.DisplayFor(x=>x.images)"
+             alt="" />
+        <div class="grid grid-cols-2 col-span-2">
+            <div class="form-group">
+                Name
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.names, new { htmlAttributes = new { @class = " form-control w-75 border-b ", @placeholder = "Name" } })
+                    @Html.ValidationMessageFor(model => model.names, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control", @placeholder = "Price" } })
-            @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.display, new { htmlAttributes = new { @class = "form-control", @placeholder = "Display" } })
-            @Html.ValidationMessageFor(model => model.display, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.weights, new { htmlAttributes = new { @class = "form-control", @placeholder = "Weights" } })
-            @Html.ValidationMessageFor(model => model.weights, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.water_resistance, new { htmlAttributes = new { @class = "form-control", @placeholder = "Water Resistance" } })
-            @Html.ValidationMessageFor(model => model.water_resistance, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.operating_system, new { htmlAttributes = new { @class = "form-control", @placeholder = "Operating System" } })
-            @Html.ValidationMessageFor(model => model.operating_system, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.processor, new { htmlAttributes = new { @class = "form-control", @placeholder = "Processor" } })
-            @Html.ValidationMessageFor(model => model.processor, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.battery, new { htmlAttributes = new { @class = "form-control", @placeholder = "Battery" } })
-            @Html.ValidationMessageFor(model => model.battery, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.ram, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ram" } })
-            @Html.ValidationMessageFor(model => model.ram, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.rate, new { htmlAttributes = new { @class = "form-control", @placeholder = "Rate" } })
-            @Html.ValidationMessageFor(model => model.rate, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.color, new { htmlAttributes = new { @class = "form-control", @placeholder = "Color" } })
-            @Html.ValidationMessageFor(model => model.color, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @placeholder = "Brand" } })
-            @Html.ValidationMessageFor(model => model.brand, "", new { @class = "text-danger" })
-        </div>
-        <div class="col-span-1">
-            @Html.EditorFor(model => model.promocode.code, new { htmlAttributes = new { @class = "form-control", @placeholder = "Promo Code" } })
-            @Html.ValidationMessageFor(model => model.promocode.code, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="w-50 mx-auto my-3">
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+                Image
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = " form-control w-75 border-b", @type = "file", @accept = "image/*" } })
+                    @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
+
+                </div>
+            </div>
+
+            <div class="form-group">
+                Price
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Price", @type = "number" } })
+                    @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Display
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.display, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Display" } })
+                    @Html.ValidationMessageFor(model => model.display, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Weights
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.weights, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Weights" } })
+                    @Html.ValidationMessageFor(model => model.weights, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Water Resistance
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.water_resistance, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Water Resistance" } })
+                    @Html.ValidationMessageFor(model => model.water_resistance, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Operating System
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.operating_system, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Operating System" } })
+                    @Html.ValidationMessageFor(model => model.operating_system, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Processor
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.processor, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Processor" } })
+                    @Html.ValidationMessageFor(model => model.processor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Battery
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.battery, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Battery" } })
+                    @Html.ValidationMessageFor(model => model.battery, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Ram
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.ram, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Ram" } })
+                    @Html.ValidationMessageFor(model => model.ram, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Quantity
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = " form-control w-75 border-b", @type = "number" } })
+                    @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Rate
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.rate, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Rate" } })
+                    @Html.ValidationMessageFor(model => model.rate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Color
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.color, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Color" } })
+                    @Html.ValidationMessageFor(model => model.color, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Brand
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Brand" } })
+                    @Html.ValidationMessageFor(model => model.brand, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                Promo Code
+                <div class="col-span-1">
+                    @Html.EditorFor(model => model.promocode.code, new { htmlAttributes = new { @class = " form-control w-75 border-b", @placeholder = "Promo Code" } })
+                    @Html.ValidationMessageFor(model => model.promocode.code, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-span-1">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.id_product)
+                </div>
             </div>
         </div>
+        <div class="col-span-3 flex space-x-2 justify-content-end">
+            <input type="submit" value="Save" class="btn bg-blue-600 text-white font-medium py-2 px-4 rounded-md" />
+
+            <a href="@Url.Action("Index", "products")" class="btn text-black cursor-pointer bg-yellow-300 font-medium py-2 px-4 rounded-md">Back</a>
+        </div>
     </div>
+
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
